fix upload and notification service replicas functionality
